Fix for slick not disappearing above 768px. Changed text-align to left rather than justify

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
   font-size: 1.05rem;
   line-height: 1.9rem;
-  text-align: justify; /* suggestion from https://www.reddit.com/r/web_design/comments/5vxy8c/feedback_friday_february_24_2017/dedxha8/ */
+  text-align: left; /* suggestion from https://www.reddit.com/r/web_design/comments/5vxy8c/feedback_friday_february_24_2017/dedxha8/ */
 }
 
 img {
@@ -174,7 +174,7 @@ section {
   margin-bottom: 50px;
   font-size: 1rem;
   line-height: 1.7rem;
-  text-align: justify; /* suggestions from https://www.reddit.com/r/web_design/comments/5vxy8c/feedback_friday_february_24_2017/dedxha8/ */
+  text-align: left; /* suggestions from https://www.reddit.com/r/web_design/comments/5vxy8c/feedback_friday_february_24_2017/dedxha8/ */
 }
 
 .slick-next {
